--- a/reco/style.css
+++ b/reco/style.css
@@ -8,9 +8,9 @@
 }
 
 .scale:hover {
-    transform: scale(1.04);
+    transform: translateX(1em);
     z-index: 10;
-    box-shadow: 0px 0px 40px #999;
+    /*box-shadow: 0px 0px 40px #999;*/
 }
 
 .scaleL {
